Fix some alignment for activities/event section

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -75,6 +75,7 @@ section {
         ul li {
             padding-bottom: 8px;
             line-height: 18px;
+            text-align: left;
         }
     }
 
@@ -127,6 +128,7 @@ section {
             font-size: 0.9rem;
             padding-bottom: 8px;
             line-height: 18px;
+            text-align: left;
         }
     }
 }
